# cube-dance

./: .gitignore  README.md  bridge.py  index.html  pyproject.toml
.github/workflows/: deploy-pages.yml
cube_dance/: __init__.py  app.py  cli.py  config.py  geometry.py  led_mesh.py  led_topology.py  patterns.py  recording.py  scenery.py  selftest.py  show.py  truss.py
cube_dance/audio/: __init__.py  analysis.py  demo.py  events.py  file.py  live.py  processor.py  source.py
cube_dance/control/: __init__.py  mapping.py  midi.py  state.py
cube_dance/hardware/: __init__.py  artnet.py  dmx.py  fixture_map.toml  mapping.py  model.py  placement.py  sacn.py
cube_dance/presets/: __init__.py  accretion.py  arc.py  atlas.py  aurora.py  barberpole.py  beambars.py  blinder.py  build.py  (+50 more)
docs/: effect-ideas-2.md  effect-ideas.md  the-rave.md
openspec/: project.md
play/: bridge.py  index.html  main.js
reference/: led_cube_2d_net.html  led_cube_mapping.json  parsed_positions.json  viz_data.json  whole_cube.scad
showcase/: README.md  build_standalone.py  index.html  make_og.py  render_clip.py
tests/: test_audio.py  test_countdown.py  test_hardware_artnet.py  test_hardware_mapping.py  test_hardware_model.py  test_hardware_sacn.py  test_model.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase5b.py  test_phase6.py  test_recording.py  test_render_offscreen.py  test_selftest.py  test_show.py  test_truss.py  test_visuals.py
tools/: countdown.py  render_storyboard.py
web/: README.md  bridge.py  build_pages.py  index.html  main.js  serve.py
(+84 files in other folders)
