[project]
name = "cube-dance"
version = "0.1.0"
description = "Sound-reactive LED control software and 3D simulation for a 2.6 m truss cube"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "glfw>=2.10.0",
    "imageio-ffmpeg>=0.6.0",
    "mido>=1.3.3",
    "moderngl>=5.12.0",
    "moderngl-window>=3.1.1",
    "numpy>=2.4.6",
    "python-rtmidi>=1.5.8",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
]

[project.scripts]
cube-dance = "cube_dance.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cube_dance"]

[tool.pytest.ini_options]
testpaths = ["tests"]
